--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: licornetics
 Type: Package
 Title: Plot physiological parameters using Li-COR data
-Version: 1.0.0
-Year: 2021
+Version: 1.1.0
+Year: 2022
 Author: Lea S. Berg
 Maintainer: Lea Berg <miss.lb.mountain@gmail.com>
-Description: Plot physiological parameters measured with the Li-COR photosystem
+Description: Plot physiological parameters measured with a Li-COR photosystem
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
