--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: licornetics
 Type: Package
-Title: Plot physiological parameters using LI-COR data
-Version: 1.1.2
-Year: 2022
+Title: Plot and calculate physiological parameters using LI-COR data
+Version: 2.0.0
+Year: 2023
 Author: Lea S. Berg
 Maintainer: Lea S. Berg <miss.lb.mountain@gmail.com>
-Description: Plot physiological parameters measured with a LI-COR photosystem
+Description: Easy calculation and plotting of physiological parameters based on LI-COR photosystem data
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1.9001
+RoxygenNote: 7.2.1
